fix(mobile): align navigation menu

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3,6 +3,11 @@
 	src: url(../typefaces/TisaOT.otf);
 }
 
+@font-face {
+	font-family: 'Univers LT Std - 47 Light Condensed';
+	src: url(/assets/typefaces/UniversLTStd-Cn.otf);
+}
+
 /*
 @font-face {
 	font-family: 'Univers LT Std';
@@ -10,10 +15,6 @@
 }
 */
 
-@font-face {
-	font-family: 'Univers LT Std - 47 Light Condensed';
-	src: url(/assets/typefaces/UniversLTStd-Cn.otf);
-}
 
 html { font-size: 100%; -webkit-text-size-adjust: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility; }
 
@@ -21,20 +22,23 @@ html { overflow-y: scroll; }
 html,body { margin: 0; height: 100%; }
 body { font: 14px/1.8em 'Tisa OT'; color: #505050; }
 
-a, h1,h2,h3,h4,h5,h6 { color: #CE0C26; text-decoration: none; }
-.heading-typeface,h1,h2,h3,h4,h5,h6 { font-family: 'Univers LT Std - 47 Light Condensed'; font-weight: lighter; text-transform: uppercase; }
 h1,h2,h3,h4,h5,h6,p { margin-top: 0; }
+a, h1,h2,h3,h4,h5,h6 { color: #CE0C26; text-decoration: none; }
 hr { border-bottom: 1px solid #EEE; border-width: 0 0 1px; margin: 3em 0; }
+.heading-typeface,h1,h2,h3,h4,h5,h6 { font-family: 'Univers LT Std - 47 Light Condensed'; font-weight: lighter; text-transform: uppercase; }
 
+#wrapper { height: 100%; }
 .column { float: left; display: inline; }
 .fill { max-width: 120%; margin-left: -10%;}
-#wrapper { height: 100%; }
 
 
 aside { width: 50%; position: fixed; top: 0; bottom: 0; background-color: rgba(221,30,62,1); color: #FFF; }
 	aside .padded { padding: 2em 10% ; width: 80%; max-width: 480px;}
 	aside .intro { font-style: italic; }
-	#logo { margin-left: -18px ; margin-top: 1em;}
+	aside .portfolio { background-color:#fff; list-style-type: none; padding: 0;}
+		.portfolio li:first-child{ color:#5A020E; padding-left: 0.6em; }
+		.portfolio li { padding-left: 1.5em;}
+	#logo { margin-left: -18px ; margin-top: 1em; }
 		#logo img{ width: 100%;}
 
 section { width: 50%; margin-left: 50%; }
@@ -42,45 +46,44 @@ section { width: 50%; margin-left: 50%; }
 	section figure { display: block; margin: 0; background-repeat: no-repeat; background-size: 100% auto; overflow: hidden; }
 
 	section#mainContent figure img {
-	  -webkit-transition: all 0.25s ease-in-out;
-	  -moz-transition: all 0.25s ease-in-out;
-	  -ms-transition: all 0.25s ease-in-out;
-	  -o-transition: all 0.25s ease-in-out;
-	  transition: all 0.25s ease-in-out;
-	  -webkit-transform: translate(0, 80%);
-	  -moz-transform: translate(0, 80%);
-	  -ms-transform: translate(0, 80%);
-	  -o-transform: translate(0, 80%);
-	  transform: translate(0, 80%);
-	  width: 120%;
-	  opacity: 0;
-  }
+		-webkit-transition: all 0.25s ease-in-out;
+		-moz-transition: all 0.25s ease-in-out;
+		-ms-transition: all 0.25s ease-in-out;
+		-o-transition: all 0.25s ease-in-out;
+		transition: all 0.25s ease-in-out;
+		-webkit-transform: translate(0, 80%);
+		-moz-transform: translate(0, 80%);
+		-ms-transform: translate(0, 80%);
+		-o-transform: translate(0, 80%);
+		transform: translate(0, 80%);
+		width: 120%;
+		opacity: 0;
+  	}
 	section#mainContent figure.active img {
-	  -webkit-transform: translate(0, 0);
-	  -moz-transform: translate(0, 0);
-	  -ms-transform: translate(0, 0);
-	  -o-transform: translate(0, 0);
-	  transform: translate(0, 0);
-	  opacity: 1;
-  }
+		-webkit-transform: translate(0, 0);
+		-moz-transform: translate(0, 0);
+		-ms-transform: translate(0, 0);
+		-o-transform: translate(0, 0);
+		transform: translate(0, 0);
+		opacity: 1;
+		}
 
-  .contentArea { padding-bottom: 30px; padding-top: 45px; }
+	.contentArea { padding-bottom: 30px; padding-top: 45px; }
 	.slides li { background-color: #FFF; }
 	.projectDetails { width: 65%; margin-right: 5%; }
 	.projectMeta { width: 30%; text-align: right; font-size: 0.8em; font-style: italic; padding: 0; margin-top: 0; list-style: none inside; }
 
-  .clearfix:before,
-  .clearfix:after {
-    content: '\0020';
-    display: block;
-    overflow: hidden;
-    visibility: hidden;
-    width: 0;
-    height: 0; }
-  .clearfix:after {
-    clear: both; }
-  .clearfix {
-    zoom: 1; }
+	.clearfix:before,
+	.clearfix:after {
+		content: '\0020';
+		display: block;
+		overflow: hidden;
+		visibility: hidden;
+		width: 0;
+		height: 0; 
+	}
+	.clearfix:after { clear: both; }
+	.clearfix { zoom: 1; }
 
 /* ----------------------------- */
 aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 0; margin-top: 0.5em; margin-bottom: 0.5em; }
@@ -113,8 +116,8 @@ aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-aside { width: 40%; }
-section { width: 60%; margin-left: 40%; }
+	aside { width: 40%; }
+	section { width: 60%; margin-left: 40%; }
 }
 
 
@@ -126,14 +129,14 @@ section { width: 70%; margin-left: 30% }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (max-width: 767px) {
-.column { position: relative; float: none; display: block; }
-aside { width: auto; }
-section { width: auto; margin-left: 0; }
-.projectDetails { width: 100%; }
-.projectMeta { width: 100%; }
+	.column { position: relative; float: none; display: block; }
+	aside { width: auto; }
+	section { width: auto; margin-left: 0; }
+	.projectDetails { width: 100%; }
+	.projectMeta { width: 100%; }
 }
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 460px) {
-.columns ul { width: 100%; float: none; }
+	.columns ul { width: 100%; float: none; }
 }
